---
title: Database Schema Diagram
---

erDiagram
    submissions {
        text body_raw 
        jsonb headers 
        text http_method 
        text public_id UK 
        text query_string 
        inet remote_ip 
        integer submission_id PK 
        timestamp_with_time_zone submission_time 
        uuid user_id FK 
    }

    user_metadata {
        boolean is_anonymous 
        integer usage_count 
        uuid user_id PK,FK 
    }

    submissions }o--|| user_metadata : "user_id"

    au["Supabase System Users Table"] {
        uuid id PK "Plus many more fields"
    }

    user_metadata ||--|| au : "user_id"
